Finished rotate().
Now, to scale().